<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validate="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="arg"
        android:title="@string/openapsarg">

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="1.5"
            android:dialogMessage="@string/arg_p_const"
            android:digits="0123456789.,"
            android:inputType="number"
            android:key="key_arg_p_const"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/arg_p_const_title"
            validate:floatmaxNumber="10"
            validate:floatminNumber="0"
            validate:testType="floatNumericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="100"
            android:dialogMessage="@string/arg_cmgref_const"
            android:digits="0123456789.,"
            android:inputType="number"
            android:key="key_arg_cmgref_const"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/arg_cmgref_const_title"
            validate:floatmaxNumber="200"
            validate:floatminNumber="20"
            validate:testType="floatNumericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="90"
            android:dialogMessage="@string/arg_td_const"
            android:digits="0123456789.,"
            android:inputType="number"
            android:key="key_arg_td_const"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/arg_td_const_title"
            validate:floatmaxNumber="200"
            validate:floatminNumber="10"
            validate:testType="floatNumericRange" />

    </PreferenceCategory>

</PreferenceScreen>
